--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,7 @@
 @import 'blocks/consultation';
 @import 'blocks/titles';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feed';
+@import 'blocks/footer';
